crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI019_PYI019_0.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI019 [*] Use `Self` instead of custom TypeVar `_S`
 --> PYI019_0.pyi:7:16
  |
6 | class BadClass:
7 |     def __new__(cls: type[_S], *args: str, **kwargs: int) -> _S: ...  # PYI019
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
  |
1 ~ from typing import TypeVar, Self, Type
2 |
…
6 | class BadClass:
7 ~     def __new__(cls, *args: str, **kwargs: int) -> Self: ...  # PYI019
  |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
  --> PYI019_0.pyi:10:28
   |
10 |     def bad_instance_method(self: _S, arg: bytes) -> _S: ...  # PYI019
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
 9 |
10 ~     def bad_instance_method(self, arg: bytes) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
  --> PYI019_0.pyi:14:25
   |
13 |     @classmethod
14 |     def bad_class_method(cls: type[_S], arg: int) -> _S: ...  # PYI019
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
13 |     @classmethod
14 ~     def bad_class_method(cls, arg: int) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
  --> PYI019_0.pyi:18:33
   |
17 |     @classmethod
18 |     def bad_posonly_class_method(cls: type[_S], /) -> _S: ...  # PYI019
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
17 |     @classmethod
18 ~     def bad_posonly_class_method(cls, /) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:39:14
   |
37 | # Python > 3.12
38 | class PEP695BadDunderNew[T]:
39 |   def __new__[S](cls: type[S], *args: Any, ** kwargs: Any) -> S: ...  # PYI019
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
38 | class PEP695BadDunderNew[T]:
39 ~   def __new__(cls, *args: Any, ** kwargs: Any) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:42:30
   |
42 |   def generic_instance_method[S](self: S) -> S: ...  # PYI019
   |                              ^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
41 |
42 ~   def generic_instance_method(self) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:54:11
   |
52 |    # in the settings for this test:
53 |    @foo_classmethod
54 |    def foo[S](cls: type[S]) -> S: ...  # PYI019
   |           ^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
53 |    @foo_classmethod
54 ~    def foo(cls) -> Self: ...  # PYI019
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:61:16
   |
60 | class PEP695Fix:
61 |     def __new__[S: PEP695Fix](cls: type[S]) -> S: ...
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
62 |
63 |     def __init_subclass__[S](cls: type[S]) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
60 | class PEP695Fix:
61 ~     def __new__(cls) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:63:26
   |
61 |     def __new__[S: PEP695Fix](cls: type[S]) -> S: ...
62 |
63 |     def __init_subclass__[S](cls: type[S]) -> S: ...
   |                          ^^^^^^^^^^^^^^^^^^^^^^
64 |
65 |     def __neg__[S: PEP695Fix](self: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
62 |
63 ~     def __init_subclass__(cls) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:65:16
   |
63 |     def __init_subclass__[S](cls: type[S]) -> S: ...
64 |
65 |     def __neg__[S: PEP695Fix](self: S) -> S: ...
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
66 |
67 |     def __pos__[S](self: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
64 |
65 ~     def __neg__(self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:67:16
   |
65 |     def __neg__[S: PEP695Fix](self: S) -> S: ...
66 |
67 |     def __pos__[S](self: S) -> S: ...
   |                ^^^^^^^^^^^^^^^^^
68 |
69 |     def __add__[S: PEP695Fix](self: S, other: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
66 |
67 ~     def __pos__(self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:69:16
   |
67 |     def __pos__[S](self: S) -> S: ...
68 |
69 |     def __add__[S: PEP695Fix](self: S, other: S) -> S: ...
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
70 |
71 |     def __sub__[S](self: S, other: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
68 |
69 ~     def __add__(self, other: Self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:71:16
   |
69 |     def __add__[S: PEP695Fix](self: S, other: S) -> S: ...
70 |
71 |     def __sub__[S](self: S, other: S) -> S: ...
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
72 |
73 |     @classmethod
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
70 |
71 ~     def __sub__(self, other: Self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:74:27
   |
73 |     @classmethod
74 |     def class_method_bound[S: PEP695Fix](cls: type[S]) -> S: ...
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
75 |
76 |     @classmethod
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
73 |     @classmethod
74 ~     def class_method_bound(cls) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:77:29
   |
76 |     @classmethod
77 |     def class_method_unbound[S](cls: type[S]) -> S: ...
   |                             ^^^^^^^^^^^^^^^^^^^^^^
78 |
79 |     def instance_method_bound[S: PEP695Fix](self: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
76 |     @classmethod
77 ~     def class_method_unbound(cls) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:79:30
   |
77 |     def class_method_unbound[S](cls: type[S]) -> S: ...
78 |
79 |     def instance_method_bound[S: PEP695Fix](self: S) -> S: ...
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
80 |
81 |     def instance_method_unbound[S](self: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
78 |
79 ~     def instance_method_bound(self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:81:32
   |
79 |     def instance_method_bound[S: PEP695Fix](self: S) -> S: ...
80 |
81 |     def instance_method_unbound[S](self: S) -> S: ...
   |                                ^^^^^^^^^^^^^^^^^
82 |
83 |     def instance_method_bound_with_another_parameter[S: PEP695Fix](self: S, other: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
80 |
81 ~     def instance_method_unbound(self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:83:53
   |
81 |     def instance_method_unbound[S](self: S) -> S: ...
82 |
83 |     def instance_method_bound_with_another_parameter[S: PEP695Fix](self: S, other: S) -> S: ...
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
84 |
85 |     def instance_method_unbound_with_another_parameter[S](self: S, other: S) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
82 |
83 ~     def instance_method_bound_with_another_parameter(self, other: Self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:85:55
   |
83 |     def instance_method_bound_with_another_parameter[S: PEP695Fix](self: S, other: S) -> S: ...
84 |
85 |     def instance_method_unbound_with_another_parameter[S](self: S, other: S) -> S: ...
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
86 |
87 |     def multiple_type_vars[S, *Ts, T](self: S, other: S, /, *args: *Ts, a: T, b: list[T]) -> S: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
84 |
85 ~     def instance_method_unbound_with_another_parameter(self, other: Self) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:87:27
   |
85 |     def instance_method_unbound_with_another_parameter[S](self: S, other: S) -> S: ...
86 |
87 |     def multiple_type_vars[S, *Ts, T](self: S, other: S, /, *args: *Ts, a: T, b: list[T]) -> S: ...
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
88 |
89 |     def mixing_old_and_new_style_type_vars[T](self: _S695, a: T, b: T) -> _S695: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
86 |
87 ~     def multiple_type_vars[*Ts, T](self, other: Self, /, *args: *Ts, a: T, b: list[T]) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `_S695`
  --> PYI019_0.pyi:89:43
   |
87 |     def multiple_type_vars[S, *Ts, T](self: S, other: S, /, *args: *Ts, a: T, b: list[T]) -> S: ...
88 |
89 |     def mixing_old_and_new_style_type_vars[T](self: _S695, a: T, b: T) -> _S695: ...
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S695` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
88 |
89 ~     def mixing_old_and_new_style_type_vars[T](self, a: T, b: T) -> Self: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
  --> PYI019_0.pyi:94:10
   |
92 | class InvalidButWeDoNotPanic:
93 |     @classmethod
94 |     def m[S](cls: type[S], /) -> S[int]: ...
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
95 |     def n(self: S) -> S[int]: ...
   |
help: Replace TypeVar `S` with `Self`
   |
 1 ~ from typing import TypeVar, Self, Type
 2 |
 …
93 |     @classmethod
94 ~     def m(cls, /) -> Self[int]: ...
   |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:114:10
    |
112 | class SubscriptReturnType:
113 |     @classmethod
114 |     def m[S](cls: type[S]) -> type[S]: ...  # PYI019
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
113 |     @classmethod
114 ~     def m(cls) -> type[Self]: ...  # PYI019
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:118:10
    |
117 | class PEP695TypeParameterAtTheVeryEndOfTheList:
118 |     def f[T, S](self: S) -> S: ...
    |          ^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
117 | class PEP695TypeParameterAtTheVeryEndOfTheList:
118 ~     def f[T](self) -> Self: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `_S695`
   --> PYI019_0.pyi:122:26
    |
121 | class PEP695Again:
122 |     def mixing_and_nested[T](self: _S695, a: list[_S695], b: dict[_S695, str | T | set[_S695]]) -> _S695: ...
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
123 |     def also_uses_s695_but_should_not_be_edited(self, v: set[tuple[_S695]]) -> _S695: ...
    |
help: Replace TypeVar `_S695` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
121 | class PEP695Again:
122 ~     def mixing_and_nested[T](self, a: list[Self], b: dict[Self, str | T | set[Self]]) -> Self: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:126:29
    |
125 |       @classmethod
126 |       def comment_in_fix_range[T, S](
    |  _____________________________^
127 | |         cls: type[  # Lorem ipsum
128 | |             S
129 | |         ],
130 | |         a: T,
131 | |         b: tuple[S, T]
132 | |     ) -> S: ...
    | |__________^
133 |
134 |       def comment_outside_fix_range[T, S](
    |
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
125 |     @classmethod
126 ~     def comment_in_fix_range[T](
127 ~         cls,
128 |         a: T,
129 ~         b: tuple[Self, T]
130 ~     ) -> Self: ...
    |
note: This is an unsafe fix and may change runtime behavior

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:134:34
    |
132 |       ) -> S: ...
133 |
134 |       def comment_outside_fix_range[T, S](
    |  __________________________________^
135 | |         self: S,
136 | |         a: T,
137 | |         b: tuple[
138 | |             # Lorem ipsum
139 | |             S, T
140 | |         ]
141 | |     ) -> S: ...
    | |__________^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
133 |
134 ~     def comment_outside_fix_range[T](
135 ~         self,
136 |         a: T,
137 |         b: tuple[
138 |             # Lorem ipsum
139 ~             Self, T
140 |         ]
141 ~     ) -> Self: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:145:10
    |
144 | class SelfNotUsedInReturnAnnotation:
145 |     def m[S](self: S, other: S) -> int: ...
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
146 |     @classmethod
147 |     def n[S](cls: type[S], other: S) -> int: ...
    |
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
144 | class SelfNotUsedInReturnAnnotation:
145 ~     def m(self, other: Self) -> int: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:147:10
    |
145 |     def m[S](self: S, other: S) -> int: ...
146 |     @classmethod
147 |     def n[S](cls: type[S], other: S) -> int: ...
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
146 |     @classmethod
147 ~     def n(cls, other: Self) -> int: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:161:10
    |
160 | class NoReturnAnnotations:
161 |     def m[S](self: S, other: S): ...
    |          ^^^^^^^^^^^^^^^^^^^^^^
162 |     @classmethod
163 |     def n[S](cls: type[S], other: S): ...
    |
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
160 | class NoReturnAnnotations:
161 ~     def m(self, other: Self): ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:163:10
    |
161 |     def m[S](self: S, other: S): ...
162 |     @classmethod
163 |     def n[S](cls: type[S], other: S): ...
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
164 |
165 | class MultipleBoundParameters:
    |
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
162 |     @classmethod
163 ~     def n(cls, other: Self): ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:166:10
    |
165 | class MultipleBoundParameters:
166 |     def m[S: int, T: int](self: S, other: T) -> S: ...
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
167 |     def n[T: (int, str), S: (int, str)](self: S, other: T) -> S: ...
    |
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
165 | class MultipleBoundParameters:
166 ~     def m[T: int](self, other: T) -> Self: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:167:10
    |
165 | class MultipleBoundParameters:
166 |     def m[S: int, T: int](self: S, other: T) -> S: ...
167 |     def n[T: (int, str), S: (int, str)](self: S, other: T) -> S: ...
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
166 |     def m[S: int, T: int](self: S, other: T) -> S: ...
167 ~     def n[T: (int, str)](self, other: T) -> Self: ...
    |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
   --> PYI019_0.pyi:181:52
    |
180 | class BadClassWithStringTypeHints:
181 |     def bad_instance_method_with_string_annotations(self: "_S", arg: str) -> "_S": ... # PYI019
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
182 |
183 |     @classmethod
    |
help: Replace TypeVar `_S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
180 | class BadClassWithStringTypeHints:
181 ~     def bad_instance_method_with_string_annotations(self, arg: str) -> "Self": ... # PYI019
    |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
   --> PYI019_0.pyi:184:49
    |
183 |     @classmethod
184 |     def bad_class_method_with_string_annotations(cls: "type[_S]") -> "_S": ... # PYI019
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
183 |     @classmethod
184 ~     def bad_class_method_with_string_annotations(cls) -> "Self": ... # PYI019
    |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
   --> PYI019_0.pyi:188:50
    |
187 |     @classmethod
188 |     def bad_class_method_with_mixed_annotations_1(cls: "type[_S]") -> _S: ... # PYI019
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
187 |     @classmethod
188 ~     def bad_class_method_with_mixed_annotations_1(cls) -> Self: ... # PYI019
    |

PYI019 [*] Use `Self` instead of custom TypeVar `_S`
   --> PYI019_0.pyi:192:50
    |
191 |     @classmethod
192 |     def bad_class_method_with_mixed_annotations_1(cls: type[_S]) -> "_S": ... # PYI019
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `_S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
191 |     @classmethod
192 ~     def bad_class_method_with_mixed_annotations_1(cls) -> "Self": ... # PYI019
    |

PYI019 [*] Use `Self` instead of custom TypeVar `S`
   --> PYI019_0.pyi:197:10
    |
195 | class BadSubscriptReturnTypeWithStringTypeHints:
196 |     @classmethod
197 |     def m[S](cls: "type[S]") -> "type[S]": ...  # PYI019
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
    |
  1 ~ from typing import TypeVar, Self, Type
  2 |
  …
196 |     @classmethod
197 ~     def m(cls) -> "type[Self]": ...  # PYI019
    |
